# FluxForge

./: README.md  index.html  package.json  tailwind.config.js
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archive.rs  commands.rs  config.rs  main.rs  pdf.rs  video.rs
src/components/: ExportModal.tsx
src/hooks/: useTheme.tsx
src/pages/: Archive.tsx  Home.tsx  PdfConvert.tsx  PdfOperations.tsx  Settings.tsx  VideoToGif.tsx
src/styles/: globals.css
src/types/: config.ts
